# arcade-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CALL_PREP_DUC_2026-04-24.md  CLAUDE.md  Makefile  README.md  REPORT.md  ROADMAP.md  bench_h1.py  h1-membership-index.patch  pyproject.toml
.arcade/: baseline.json
.github/workflows/: arch-drift.yml  architecture-analysis-reusable.yml  ci.yml  publish.yml
actions/analyze/: action.yml
docs/: BUG_CATALOG.md
examples/: arcade_core_report.html  basic_analysis.py
examples/workflows/: arcade-agent-analysis.yml
meeting/: 2026-06-11-duc-le-agent-strategy.md
scripts/: __init__.py  arch_diff.py  compare_baseline.py  incremental_prototype.py  log_analysis_summary.py  run_self_analysis.py
src/arcade_agent/: __init__.py  budget.py  cache.py  incremental.py  llm.py  registry.py  serialization.py
tests/: conftest.py  test_api_surface.py  test_arch_diff.py  test_budget.py  test_cache.py  test_context_for_task.py  test_dependency_cone.py  test_diff_impact.py  test_explain_component.py  test_find_relevant.py  test_github_action_distribution.py  test_mcp.py  test_mcp_e2e.py  test_mcp_multilang_e2e.py  test_serialization.py  test_summarize.py  test_traversal.py
tests/fixtures/: AdvancedCalculator.java  Calculator.java  MathHelper.java  app.py  models.py
tests/test_algorithms/: test_arc.py  test_architecture.py  test_coupling.py  test_matching.py
tests/test_parsers/: test_c.py  test_go.py  test_graph_merge.py  test_incremental.py  test_java.py  test_kotlin.py  test_multilang_family_scoping.py  test_python.py  (+2 more)
(+101 files in other folders)
